# GEN_AI-LLM

./: .env.example  README.md  agent.py  app.py  experiments.ipynb  flow.excalidraw  ingest.py  main.py  pyproject.toml  requrements.txt
faiss_index/: index.faiss  index.pkl
sample_docs/: ai_concepts.txt
