[project]
name = "gen-ai-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
